maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: ':' expected but ')' found.
	def isDirectionFree(dir) {
                               ^Escaper:38: error: identifier expected but '}' found.
}
^